# open-flow

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.ofasr.md  README.zh-CN.md  README.zh-TW.md  install.sh
.cursor/hooks/: session-start.sh  session-stop.sh
.cursor/rules/: memory-system.mdc
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
.loom/: index.md
.loom/concepts/: open-flow-技术架构-当前实现.md  open-flow-系统架构概览.md
.loom/decisions/: 采用-daemon-cli-架构的原因.md
.loom/threads/: loom-初始化与架构知识沉淀-2026-03-19.md
assets/: AppIcon.icns
docs/: ARCHITECTURE.md  CURRENT_STATE.md  INDEX.md  MODEL_DOWNLOAD_TODO.md  RUST_ASR_PLAN.md  open-flow-privacy-policy.html
docs/design/: settings-panel-codex-style-redesign.md
docs/sessions/: INDEX.md  session-2026-03-13.md
python/: README.md  pyproject.toml  requirements.txt
python/open_flow/: __init__.py  asr.py  cli.py
scripts/: build-app.sh  build-mas-app-store-pkg.sh  build-mas-app-store.sh  compare_transcribe.sh  dump_features.py  mas-preflight.sh  release.sh  setup-notary-profile.sh  upload-mas-app-store.sh  vibevoice_tts.py
settings-app/: Package.swift
settings-app/Sources/OpenFlowSettings/: App.swift  ConfigManager.swift  ContentView.swift
settings-app/Sources/OpenFlowSystemAudioHelper/: main.swift
src/: lib.rs  main.rs  model_store.rs
src/asr/: decoder.rs  groq.rs  mod.rs  onnx_inference.rs  preprocess.rs
src/audio/: mod.rs
src/cli/: daemon.rs
src/cli/commands/: audio_devices.rs  config.rs  mod.rs  model.rs  setup.rs  support.rs  test_hotkey.rs  test_record.rs  transcribe.rs
src/common/: config.rs  ipc.rs  logging.rs  memory.rs  mod.rs  perf.rs  types.rs  ui.rs
src/correction/: mod.rs
src/daemon/: mod.rs
src/draft_panel/: mod.rs
src/draft_transform/: mod.rs
src/hotkey/: mod.rs
src/llm/: mod.rs
src/meeting_notes/: mod.rs
src/overlay/: mod.rs
src/settings_window/: mod.rs
src/system_audio/: mod.rs
src/text_injection/: chinese_convert.rs  mod.rs
src/tray/: icons.rs  mod.rs
src/tts/: mod.rs
