[package]
name = "open-flow"
version = "0.1.8"
edition = "2021"
authors = ["Open Flow Contributors"]
description = "AI coding voice input daemon for macOS - macOS 全局语音输入工具"
license = "MIT"
repository = "https://github.com/jqlong17/open-flow"
keywords = ["voice", "asr", "speech-to-text", "macos", "ai-coding"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "open-flow"
path = "src/main.rs"

[lib]
name = "open_flow"
path = "src/lib.rs"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Audio
cpal = "0.15"
hound = "3.5"
ringbuf = "0.3"

# Cross-platform
rdev = "0.5"
arboard = "3"
tray-icon = "0.21"

# ASR - SenseVoice ONNX integration
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
rubato = "0.16"
realfft = "3.4"

# HTTP client (for model download)，用 rustls 避免 Linux 上依赖系统 OpenSSL
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Utils（放 [dependencies] 内，保证 Linux/macOS/Windows 都能用）
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
rand = "0.8"
libc = "0.2"
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 专用：菜单栏托盘、AppKit 集成（tray-icon 已在根 dependencies）
core-foundation = "0.9"
core-graphics = "0.23"
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux 托盘（tray-icon 用 libappindicator）需主线程跑 glib 事件循环
glib = "0.19"

[dev-dependencies]
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
